Insertamos categorías a los libros a traves de hibernate

--- a/22_tienda_cliente_identificacion_usuario/.project
+++ b/22_tienda_cliente_identificacion_usuario/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>22_tienda_cliente_identificacion_usuario</name>
+	<name>23_tienda_categorias</name>
 	<comment></comment>
 	<projects>
 	</projects>
